<resources>
    <string name="abbott_freestyle_library_not_available">Abbott Freestyle kan ikke bruges i denne version af OpenTele</string>
    <string name="acknowledgements_acknowledgements">Kvitteringer</string>
    <string name="acknowledgements_fetching">Henter kvitteringer</string>
    <string name="admin_change_server">Ret server-URL</string>
    <string name="admin_set_alarm">Sæt alarm</string>
    <string name="admin_show_upload_debug">Vis Upload-debug-node?</string>
    <string name="admin_set_nonin_data_mode">Indstil Nonin dataformat</string>
    <string name="admin_set_nonin_data_mode_8">Indstil til Dataformat #8</string>
    <string name="admin_set_nonin_data_mode_13">Indstil til Dataformat #13</string>
    <string name="admin_set_nonin_data_mode_setting">Skifter dataformat</string>
    <string name="admin_set_nonin_data_mode_set">Dataformat skiftet</string>
    <string name="alarm_alarm">Alarm</string>
    <string name="alarm_user_prompt">Du skal besvare et spørgeskema</string>
    <string name="app_name">OpenTele</string>
    <string name="bloodpressure_could_not_connect">Kunne ikke forbinde til måler.</string>
    <string name="bloodpressure_diastolic">Diastolisk blodtryk:</string>
    <string name="bloodpressure_disconnected">Forbindelse afbrudt.</string>
    <string name="bloodpressure_permanent_problem">Der kan ikke skabes forbindelse.</string>
    <string name="bloodpressure_press_start">Tryk på START-knappen på blodtryksmåleren.</string>
    <string name="bloodpressure_pulse">Puls:</string>
    <string name="bloodpressure_systolic">Systolisk blodtryk:</string>
    <string name="bloodpressure_temporary_problem">Kunne ikke hente data. Prøv evt. en ny blodtryksmåling.</string>
    <string name="bloodpressure_waiting_for_measurement">Venter på måling. Hold dig i ro.</string>
    <string name="bloodpressure_your_bloodpressure_and_pulse">Dit blodtryk og din puls</string>
    <string name="bloodsugar_after_meal">Efter måltid</string>
    <string name="bloodsugar_before_meal">Før måltid</string>
    <string name="bloodsugar_connect_device">Tilslut din blodsukkermåler. Vær sikker på at blodsukkermåleren er slukket inden den tilsluttes.</string>
    <string name="bloodsugar_connected">Blodsukkermåler fundet.</string>
    <string name="bloodsugar_fetching_measurements">Henter blodsukkermålinger.</string>
    <string name="bloodsugar_measurements_fetched">Blodsukkermålinger hentet.</string>
    <string name="bloodsugar_no_diary">Kunne ikke finde blodsukkermålinger.</string>
    <string name="bloodsugar_parse_failed">Kunne ikke læse blodsukkermålinger. Kontakt din kontaktperson.</string>
    <string name="bloodsugar_too_many_diaries">For mange blodsukkermålinger.</string>
    <string name="change_password_change">Skift</string>
    <string name="change_password_changing_password">Skifter adgangskode. Vent venligst...</string>
    <string name="change_password_repeat_password">Gentag ny adgangskode</string>
    <string name="change_password_change_password">Skift adgangskode</string>
    <string name="change_password_new_password">Ny adgangskode</string>
    <string name="checking_version_detail">Kontrollerer om programmet er opdateret</string>
    <string name="checking_version_headling">Kontrollerer programversion</string>
    <string name="clear_user_name_on_login">${userName.clearOnLogin}</string>
    <string name="client_server_version_connection_problem_body">Kunne ikke kontakte serveren. Tjek din netværksforbindelse og prøv igen.</string>
    <string name="client_server_version_connection_problem_button">OK</string>
    <string name="client_server_version_connection_problem_title">Forbindelsesproblem</string>
    <string name="client_server_version_mismatch">Du kan ikke logge ind. Programmet skal opdateres. Kontakt din kontaktperson for hjælp.</string>
    <string name="client_server_version_not_checked">Kunne ikke kontakte serveren for at kontrollere versionsnummer. Tjek netværksforbindelsen.</string>
    <string name="client_version">${version}</string>
    <string name="crp_angiv_resultat_">Angiv resultat </string>
    <string name="crp_measurement_or">eller</string>
    <string name="crp_under_5"> &lt;5</string>
    <string name="cgm_connected">Forbundet til enhed. Henter målinger.</string>
    <string name="cgm_measurements_fetched">Blodsukkermålinger hentet.</string>
    <string name="cgm_could_not_connect_to_device">Kunne ikke forbinde til enheden.</string>
    <string name="cgm_connect_device">Tilslut din Abbott FreeStyle Navigator.\n Hvis du bliver spurgt om du vil give OpenTele adgang til USB-enheden skal du svare ”OK”.  </string>
    <string name="cgm_access_denied">Du gav ikke OpenTele tilladelse til at tilgå din Abbott FreeStyle Navigator. Hvis du ønsker at overføre målinger, skal du give tilladelse til at tilgå USB-enheden.\n Tryk på ”Prøv igen” for at prøve igen.\n  Ellers vælg ”Undlad”.</string>
    <string name="default_cancel">Annuller</string>
    <string name="default_menu">Menu</string>
    <string name="default_next">Næste</string>
    <string name="default_no">Nej</string>
    <string name="default_ok">OK</string>
    <string name="default_omit">Undlad</string>
    <string name="default_open_tele">OpenTele</string>
    <string name="default_please_wait">Vent venligst...</string>
    <string name="default_proceed">Fortsæt</string>
    <string name="default_retry">Prøv igen</string>
    <string name="default_server_communication_error">Fejl ved kommunikation med serveren</string>
    <string name="default_validation_error">Et eller flere felter er ikke udfyldt korrekt</string>
    <string name="default_working">Arbejder</string>
    <string name="default_yes">Ja</string>
    <string name="delay_out_of">&#160;ud af&#160;</string>
    <string name="delay_seconds">&#160;sekunder.</string>
    <string name="delay_time_elapsed">Tid gået:</string>
    <string name="delay_time_left">Tid tilbage:</string>
    <string name="error_error_occured">Der er sket en fejl :(</string>
    <string name="haemoglobin_enter_value">Indtast hæmoglobinværdi</string>
    <string name="login_account_locked">Din konto er blevet låst. Henvend dig til din kontaktperson.</string>
    <string name="login_client_must_be_upgraded">OpenTele skal opdateres inden du kan logge ind.</string>
    <string name="login_logging_in">Logger ind...</string>
    <string name="login_login">Log ind</string>
    <string name="login_password">Adgangskode</string>
    <string name="login_username">Brugernavn</string>
    <string name="login_wrong_username_password">Forkert brugernavn eller adgangskode.</string>
    <string name="lung_monitor_bad_measurement">Dårlig måling modtaget. Prøv igen.</string>
    <string name="lung_monitor_connect">Tænd for apparatet og udfør lungefunktionstest.</string>
    <string name="lung_monitor_could_not_connect">Kunne ikke forbinde til lungefunktionsmåler.</string>
    <string name="lung_monitor_measurement_received">Måling modtaget.</string>
    <string name="lung_monitor_perform_test">Udfør lungefunktionstest.</string>
    <string name="lung_monitor_permanent_problem">Der kan ikke skabes forbindelse.</string>
    <string name="lung_monitor_temporary_problem">Kunne ikke hente data. Prøv evt. igen.</string>
    <string name="m_lingen_er_">Målingen er: </string>
    <string name="menu_acknowledements">Kvitteringer</string>
    <string name="menu_change_password">Skift adgangskode</string>
    <string name="menu_complete_questionnaire">Gennemfør måling</string>
    <string name="menu_messages"><![CDATA[Beskeder{0,choice,0#|1#\' (\'én ny besked\')\'|1<\' (\'{0,number,integer} nye\')\'}]]></string>
    <string name="menu_my_measurements">Mine målinger</string>
    <string name="menu_realtime_CTG">CTG måling - direkte</string>
    <string name="message_unread_new"><![CDATA[<font color=\'red\' >Ny</font>]]></string>
    <string name="message_create">Opret ny besked</string>
    <string name="message_error_while_sending">Fejl ved afsendelse af besked!</string>
    <string name="message_fetching">Henter beskeder</string>
    <string name="message_headline">Overskrift</string>
    <string name="message_message">Besked</string>
    <string name="message_message_sent">Beskeden er nu afsendt.</string>
    <string name="message_messages">Beskeder</string>
    <string name="message_new">Ny besked</string>
    <string name="message_read_write">Her kan du læse og skrive beskeder.</string>
    <string name="message_received">modtaget</string>
    <string name="message_send">Send</string>
    <string name="message_sending">Indsender besvarelser - vent venligst...</string>
    <string name="message_sent">sendt</string>
    <string name="message_unread">(Ulæst)</string>
    <string name="message_write_instructions">For at skrive en besked skal du trykke på knappen \"Ny besked\".</string>
    <string name="monica_bluetooth_off">Fejl: Bluetooth er slået fra</string>
    <string name="monica_accept_simulate">Ja tak, kør simuleret</string>
    <string name="monica_ask_simulate">Simulér Monica device?</string>
    <string name="monica_battery_low">Der er ikke tilstrækkelig strøm på Monica-apparatet.</string>
    <string name="monica_black">Sort (B)</string>
    <string name="monica_bluetooth_unavaliable">Fejl: Bluetooth er ikke tilgængeligt</string>
    <string name="monica_checking_connection">Kontrollerer forbindelser. Sluk ikke for Monica-apparatet, men ret de forbindelser der ikke har et flueben.</string>
    <string name="monica_closing">Afslutter</string>
    <string name="monica_communication_error">Kunne ikke kommunikere med Monica-apparatet</string>
    <string name="monica_decline_simulate">Nej tak, brug Monica-apparatet</string>
    <string name="monica_device">Monica device</string>
    <string name="monica_device_initialisation_error">Det lykkedes ikke at starte Monica-apparatet korrekt. Sluk for apperartet og prøv igen.</string>
    <string name="monica_device_not_found">Der blev ikke fundet et apparat der kan benyttes med dette program.</string>
    <string name="monica_enter_duration">Angiv opsamlingstid i minutter:</string>
    <string name="monica_failed_to_start">Opstart af Monica-apparatet fejlede. Sluk for apperartet og prøv igen.</string>
    <string name="monica_green">Grøn (G)</string>
    <string name="monica_indcators_or_only_guides">Ovenstående indikatorer er kun vejledende. Det er altid måleapparatets indikatorer der er gældende.</string>
    <string name="monica_missing_sample">Der opstod en datafejl under læsningen fra Monica-apparatet.</string>
    <string name="monica_multiple_devices">Fejl: Der er tilknyttet mere end et Monica-apparater.</string>
    <string name="monica_orange">Orange (O)</string>
    <string name="monica_processing_data">Behandler data</string>
    <string name="monica_question_marks">\?\?</string>
    <string name="monica_reading_interrupted">Læsning af data er stoppet.</string>
    <string name="monica_receiving_data">Modtager data...</string>
    <string name="monica_set_time">Indstil tiden:</string>
    <string name="monica_switched_off">Monica-apparatet blev slukket!</string>
    <string name="monica_time_set_to">Indstillet til</string>
    <string name="monica_unknown_firmware">Monica-apparatets version ( %1$s ) er ikke understøttet af dette program.</string>
    <string name="monica_waiting_for_connection">Venter på forbindelse. (Tænd for Monica-apparatet, og hold tablet og Monica-apparatet indenfor 3 m fra hinanden)</string>
    <string name="monica_white">Hvid (W)</string>
    <string name="monica_yellow">Gul (Y)</string>
    <string name="realtime_ctg_headline">CTG måling - direkte</string>
    <string name="realtime_ctg_monica_status">Gør dig klar til CTG. Påsæt elektroder. Tryk start og tænd derefter for Monicaen</string>
    <string name="realtime_ctg_stop_measurement">Stop</string>
    <string name="realtime_ctg_start_measurement">Start</string>
</resources>