<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="#D9D5CC"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dip" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_panel" />

    <LinearLayout
        android:id="@+id/header"
        style="@style/background_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/headline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#777"
            android:textSize="36sp"
            android:text="@string/default_menu"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:padding="0dip" >

        <LinearLayout
            style="@style/background_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dip">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:text="@string/menu_complete_questionnaire"
                      android:id="@+id/patient_menu_questionnaire"
                      android:background="@drawable/thin_black_line"
                      style="@style/menu_item_style"/>

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/patient_menu_messages"
                      android:background="@drawable/thin_black_line"
                      android:visibility="gone"
                      style="@style/menu_item_style"/>

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:text="@string/menu_acknowledements"
                      android:id="@+id/patient_menu_acknowledements"
                      android:background="@drawable/thin_black_line"
                      android:visibility="gone"
                      style="@style/menu_item_style"/>

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:text="@string/menu_my_measurements"
                      android:id="@+id/patient_menu_my_measurements"
                      android:background="@drawable/thin_black_line"
                      style="@style/menu_item_style"/>

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:text="@string/menu_realtime_CTG"
                      android:id="@+id/patient_menu_realtime_ctg"
                      android:background="@drawable/thin_black_line"
                      android:visibility="gone"
                      style="@style/menu_item_style"/>

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:text="@string/menu_change_password"
                      android:id="@+id/patient_menu_change_password"
                      style="@style/menu_item_style"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>