<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#D9D5CC"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dip">

    <LinearLayout
        android:id="@+id/header"
        style="@style/background_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/default_open_tele"
            android:textColor="#777"
            android:textSize="48sp" />
    </LinearLayout>


    <LinearLayout
        style="@style/background_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_login_in_progress_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/login_logging_in"
            android:textColor="#777"
            android:textSize="36dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/login_error_text"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FF0000"
            android:textSize="36dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_username_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_username"
                    android:textColor="#777"
                    android:textSize="36dp" />

                <EditText
                    android:id="@+id/login_username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword"
                    android:longClickable="false"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textSize="36dp">

                    <requestFocus></requestFocus>
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/login_password_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_password"
                    android:textColor="#777"
                    android:textSize="36sp" />

                <EditText
                    android:id="@+id/login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNone"
                    android:inputType="textVisiblePassword"
                    android:longClickable="false"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textSize="36dp" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                style="@style/buttonstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:text="@string/login_login"
                android:textSize="36dp" />
        </LinearLayout>

        <TextView
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="left|bottom"
            android:id="@+id/login_debug_info"
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="#404040"
            android:textSize="9dp" />
    </LinearLayout>
</LinearLayout>